test/sema/mutate-immutable-this.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct Foo {
    let i: int;
    // CHECK: [[@LINE+1]]:23: error: cannot increment immutable value
    def bar() { this.i++; }
}
